k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-platform-app
  labels:
    app: nginx-platform-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-platform-app
  template:
    metadata:
      labels:
        app: nginx-platform-app
    spec:
      tolerations:
        - key: "environment"
          operator: "Equals"
          value: "dev"
          effect: "NoSchedule"
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
