k8s/list-pod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-pod-deployment
  namespace: tp3
spec:
    replicas: 1
    selector:
        matchLabels:
          test: list-pod
    template:
        metadata:
          labels:
              test: list-pod
        spec:
          serviceAccountName: list-pod-sa
          containers:
              - name: list-pod
                image: rancher/kubectl:1.34
                command:
                  - "/bin/sh"
                  - "-c"
                  - "kubectl get pods -n tp3; sleep 600"
