k8s/security-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security
  namespace: tp3
  labels:
    app: security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security
  template:
    metadata:
      name: security
      labels:
        app: security
    spec:
      securityContext:
      containers:
        - name: security
          image: debian:trixie-slim
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 2000
          command: ["/bin/sh", "-c", "while true; do echo 'Hello from security app!'; done"]
      restartPolicy: Always
