k8s/example-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-example-app
  namespace: tp4
spec:
  replicas: 2
  selector:
    matchLabels:
      test: gateway
  template:
    metadata:
      labels:
        test: gateway
    spec:
      containers:
        - name: example
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello, Kubernetes gateway!"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-example-service
  namespace: tp4
spec:
  selector:
    test: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
