k8s/example-multi-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiple-app-1
  namespace: tp4
spec:
  replicas: 1
  selector:
    matchLabels:
      test: gateway-app-1
  template:
    metadata:
      labels:
        test: gateway-app-1
    spec:
      containers:
        - name: example
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello from App1"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: multiple-service-1
  namespace: tp4
spec:
  selector:
    test: gateway-app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiple-app-2
  namespace: tp4
spec:
  replicas: 1
  selector:
    matchLabels:
      test: gateway-app-2
  template:
    metadata:
      labels:
        test: gateway-app-2
    spec:
      containers:
        - name: example
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello from App2"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: multiple-service-2
  namespace: tp4
spec:
  selector:
    test: gateway-app-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
