k8s/netpol-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: tp3
  labels:
    test: netpol
spec:
  replicas: 1
  selector:
    matchLabels:
      test: netpol
  template:
    metadata:
      labels:
        test: netpol
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: db
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tp3
  labels:
    test: netpol
spec:
    selector:
        test: netpol
    ports:
        - port: 5432
          protocol: TCP
          targetPort: db
