k8s/nginx-pod-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod-affinity
  namespace: tp5
  labels:
    test: affinity
spec:
  replicas: 3
  selector:
    matchLabels:
      test: affinity
  template:
    metadata:
      labels:
        test: affinity
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Equal
          key: app
          value: nginx
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-affinity
spec:
  selector:
    test: affinity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
