k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-platform-service
spec:
  type: ClusterIP
  selector:
    app: nginx-platform-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
